--- a/ui/package.json
+++ b/ui/package.json
@@ -45,6 +45,7 @@
         "jquery": "3.5.0",
         "term.js": "^0.0.7",
         "js-cookie": "2.2.1",
-        "pxt-blockly": "2.1.14"
+        "pxt-blockly": "2.1.14",
+        "copy-text-to-clipboard": "2.2.0"
     }
 }
